<resources>
    <string name="app_name">Weekend2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="etPhoneNumber">Phone Number</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="send_notification">Send Notification</string>
    <string name="send_text">Send Text</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="alert_options">Alert Options</string>
    <string name="alert_custom">Alert Custom</string>
    <string name="alert_default">Alert Default</string>
    <string name="fragmentdialog">FragmentDialog</string>
    <string name="pdf_viewer">Pdf Viewer</string>
</resources>
